[gd_scene load_steps=17 format=3 uid="uid://bl1fy1m5y84p4"]

[ext_resource type="Script" path="res://dialogue_scene/dialogue_scene.gd" id="1_iqvk0"]
[ext_resource type="Texture2D" uid="uid://b30p5j3pxonww" path="res://assets/sprites/sv_crowd.png" id="2_gruop"]
[ext_resource type="Texture2D" uid="uid://d3hfhda0t51c6" path="res://assets/sprites/sv_king_neutral.png" id="3_1c5or"]
[ext_resource type="Script" path="res://dialogue_scene/character.gd" id="4_8em3g"]
[ext_resource type="Texture2D" uid="uid://dtydkcfk4e8sn" path="res://assets/sprites/sv_player_scared.png" id="4_w5rsm"]
[ext_resource type="Texture2D" uid="uid://h0uj0ye8u74p" path="res://assets/sprites/sv_textbox_kid.png" id="5_osgyf"]
[ext_resource type="Script" path="res://dialogue_scene/DialogueBox.gd" id="6_iwbhi"]
[ext_resource type="FontFile" uid="uid://bda3nvjdg78pn" path="res://assets/fonts/playerfont-Regular.ttf" id="7_yvt45"]
[ext_resource type="Texture2D" uid="uid://dr1a4q36857lj" path="res://assets/sprites/sv_textbox_king.png" id="8_i55lg"]
[ext_resource type="FontFile" uid="uid://dyon7poiilo3p" path="res://assets/fonts/Kingfont-Regular.ttf" id="9_cdjw6"]
[ext_resource type="PackedScene" uid="uid://biod12rdse4po" path="res://bullet_hell/display/pause_ui.tscn" id="12_ccge0"]
[ext_resource type="PackedScene" uid="uid://dl0s52uhiaau5" path="res://dialogue_scene/DialogueAudioPlayer.tscn" id="12_fv4ax"]

[sub_resource type="SpriteFrames" id="SpriteFrames_agd5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1c5or")
}],
"loop": true,
"name": &"neutral",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_eh4lb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_w5rsm")
}],
"loop": true,
"name": &"scared",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_khwmw"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeAnimation:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nt54k"]
_data = {
"fade_in": SubResource("Animation_khwmw")
}

[node name="sv_dialogue_scene" type="CanvasLayer"]
script = ExtResource("1_iqvk0")
script_file_path = "res://dialogue_scene/test2.txt"

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Crowd" type="TextureRect" parent="."]
offset_right = 9600.0
offset_bottom = 5400.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_gruop")

[node name="King" type="AnimatedSprite2D" parent="."]
position = Vector2(1284, 581)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_agd5e")
animation = &"neutral"
script = ExtResource("4_8em3g")
character_name = "King"

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(397, 749)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_eh4lb")
animation = &"scared"
script = ExtResource("4_8em3g")
character_name = "Player"

[node name="PlayerDialogueBox" type="TextureRect" parent="." node_paths=PackedStringArray("dialogue_audio")]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -725.0
offset_top = -915.0
offset_right = 2648.0
offset_bottom = 507.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_osgyf")
script = ExtResource("6_iwbhi")
character_name = "Player"
dialogue_audio = NodePath("../DialogueAudioPlayer")

[node name="Label" type="Label" parent="PlayerDialogueBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1336.5
offset_top = -476.0
offset_right = 1336.5
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_yvt45")
theme_override_font_sizes/font_size = 250
text = "i uhhh ... umm"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 2

[node name="TextTimer" type="Timer" parent="PlayerDialogueBox"]

[node name="KingDialogueBox" type="TextureRect" parent="." node_paths=PackedStringArray("dialogue_audio")]
visible = false
offset_left = 144.0
offset_top = 104.0
offset_right = 4680.0
offset_bottom = 1753.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_i55lg")
script = ExtResource("6_iwbhi")
character_name = "King"
dialogue_audio = NodePath("../DialogueAudioPlayer")

[node name="Label" type="Label" parent="KingDialogueBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1758.0
offset_top = -504.5
offset_right = 1638.0
offset_bottom = 444.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_cdjw6")
theme_override_font_sizes/font_size = 300
text = "you wot mate"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 2

[node name="TextTimer" type="Timer" parent="KingDialogueBox"]

[node name="FadeAnimation" type="ColorRect" parent="."]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
libraries = {
"": SubResource("AnimationLibrary_nt54k")
}

[node name="Timer" type="Timer" parent="."]

[node name="pause_ui" parent="." instance=ExtResource("12_ccge0")]

[node name="DialogueAudioPlayer" parent="." instance=ExtResource("12_fv4ax")]

[connection signal="active_speaker" from="." to="PlayerDialogueBox" method="_on_dialogue_scene_active_speaker"]
[connection signal="active_speaker" from="." to="KingDialogueBox" method="_on_dialogue_scene_active_speaker"]
[connection signal="change_emotion" from="." to="King" method="_on_dialogue_scene_change_emotion"]
[connection signal="change_emotion" from="." to="Player" method="_on_dialogue_scene_change_emotion"]
[connection signal="display_line" from="." to="PlayerDialogueBox" method="_on_dialogue_scene_display_line"]
[connection signal="display_line" from="." to="KingDialogueBox" method="_on_dialogue_scene_display_line"]
[connection signal="speed_animation" from="." to="PlayerDialogueBox" method="_on_dialogue_scene_speed_animation"]
[connection signal="speed_animation" from="." to="KingDialogueBox" method="_on_dialogue_scene_speed_animation"]
[connection signal="text_animation_done" from="PlayerDialogueBox" to="." method="_on_dialogue_box_text_animation_done"]
[connection signal="text_animation_done" from="KingDialogueBox" to="." method="_on_dialogue_box_text_animation_done"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
